IVYPORTAL-12826-enhance-and-fix-bugs-new - IVYPORTAL-12869: Portal dashboard shows horizontal scrollbar when opening the filter panel
Former-commit-id: 024f0bd4dc921058d844aa365c2d2f9db94ec29f

--- a/AxonIvyPortal/PortalTemplate/webContent/resources/css/dashboard.css
+++ b/AxonIvyPortal/PortalTemplate/webContent/resources/css/dashboard.css
@@ -27,6 +27,10 @@
   padding: 0;
 }
 
+.dashboard-card.new-widget {
+  outline: 3px solid var(--accent-color);
+}
+
 .ui-draggable:not(.ui-draggable-disabled)>.ui-draggable-handle {
   cursor: move;
 }
@@ -58,7 +62,8 @@
 }
 
 .dashboard__body {
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   padding-top: 0;
 }
 
